--- a/server/public/index.html
+++ b/server/public/index.html
@@ -59,7 +59,7 @@
               </div>
 
               <div class="input-group">
-                <button type="button" id="addButton">Add Koala</button>
+                <button class="btn btn-success" type="button" id="addButton">Add Koala</button>
               </div>
 
             </section>
